fixed width issue on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,7 @@
 
 @layer components {
   .contactInput {
-    @apply rounded-md border-b border-[#242424] bg-slate-400/10 px-2 text-white placeholder-gray-600 outline-none transition-all focus:border-emerald-500/40 focus:text-emerald-200/40 hover:border-emerald-500/40 md:px-6 md:py-2 lg:py-2;
+    @apply rounded-lg border border-white/40 bg-transparent p-2 text-sm text-white placeholder-gray-600 outline-none transition-all duration-300 focus:border-white hover:border-white  md:py-2 lg:py-2;
   }
 
   .heroSkillImages {
